# sidecar

./: .gitignore  Cargo.toml  README.md  proxycar.config.example.yaml
services/proxycar/: Cargo.toml
services/proxycar/src/: cli.rs  config.rs  main.rs  proxy.rs
