[package]
name = "proxycar"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
axum = "0.7"
serde = { version = "1.0.214", features = ["derive"] }
clap = { version = "4.5.20", features = ["derive"] }
anyhow = "1.0.93"
serde_yaml = "0.9"
tower = "0.5.1"
config = "0.14.1"
hyper = { version = "1.5.0", features = ["client"] }
reqwest = "0.12.9"
multitool-hg = { version = "0.1.3", features = ["logger"] }
log = "0.4.22"
tracing = "0.1.40"
