[package]
name = "proxycar"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1.0.214", features = ["derive"] }
clap = { version = "4.5.20", features = ["derive"] }
anyhow = "1.0.93"
serde_yaml = "0.9"
reqwest = "0.12.9"
multitool-hg = { version = "0.1.3", features = ["logger"] }
log = "0.4.22"
tracing = "0.1.40"
bytes = "1.8.0"
tokio-util = "0.7.12"
